[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/scripts/Dialog/DialogPanel.gd" type="Script" id=1]
[ext_resource path="res://res/sprites/UI/portrait_panel.png" type="Texture" id=2]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/sprites/UI/textbox.png" type="Texture" id=4]

[node name="DialogPanel" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.15247
margin_top = -4.39459
margin_right = -6.15247
margin_bottom = -4.39459
rect_scale = Vector2( 1.00398, 1 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -245.0
margin_right = 640.0
margin_bottom = -10.0

[node name="Center" type="CenterContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -584.0
margin_top = -231.0
margin_right = 584.0

[node name="Grid" type="GridContainer" parent="Panel/Center"]
margin_right = 1168.0
margin_bottom = 231.0
grow_horizontal = 0
grow_vertical = 0
columns = 2

[node name="Portrait" type="TextureRect" parent="Panel/Center/Grid"]
self_modulate = Color( 1, 1, 1, 0.92549 )
margin_right = 191.0
margin_bottom = 231.0
rect_min_size = Vector2( 191, 231 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="CharaPortrait" type="TextureRect" parent="Panel/Center/Grid/Portrait"]
margin_left = 24.8468
margin_top = 81.7289
margin_right = 164.847
margin_bottom = 198.729
expand = true
stretch_mode = 6

[node name="CharaName" type="Label" parent="Panel/Center/Grid/Portrait"]
margin_left = 15.6019
margin_top = 24.7289
margin_right = 175.602
margin_bottom = 70.7289
custom_fonts/font = ExtResource( 3 )
text = "GUARD"
align = 1
valign = 1
uppercase = true

[node name="Panel" type="TextureRect" parent="Panel/Center/Grid"]
self_modulate = Color( 1, 1, 1, 0.92549 )
margin_left = 195.0
margin_right = 1168.0
margin_bottom = 231.0
rect_min_size = Vector2( 973, 231 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="CharaMessage" type="Label" parent="Panel/Center/Grid/Panel"]
margin_left = 36.9786
margin_top = 27.84
margin_right = 941.979
margin_bottom = 145.84
custom_fonts/font = ExtResource( 3 )
text = "Stop right there criminal scum !
You'll pay for what you did !"
autowrap = true

[node name="Choices" type="GridContainer" parent="Panel/Center/Grid/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 39.107
margin_top = 151.41
margin_right = -321.893
margin_bottom = -12.5906
columns = 4

[node name="Button5" type="Button" parent="Panel/Center/Grid/Panel/Choices"]
margin_right = 150.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.592157, 0, 0, 1 )
custom_constants/hseparation = 0
text = "AAAAAA"
flat = true

[node name="Button6" type="Button" parent="Panel/Center/Grid/Panel/Choices"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.592157, 0, 0, 1 )
custom_constants/hseparation = 0
text = "AAAAAA"
flat = true

[node name="Button7" type="Button" parent="Panel/Center/Grid/Panel/Choices"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.592157, 0, 0, 1 )
custom_constants/hseparation = 0
text = "AAAAAA"
flat = true

[node name="Button8" type="Button" parent="Panel/Center/Grid/Panel/Choices"]
margin_left = 462.0
margin_right = 612.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 52 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.592157, 0, 0, 1 )
custom_constants/hseparation = 0
text = "AAAAAA"
flat = true
